<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activity_Rules">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/rules_gameInfo"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold"/>

            <View
                android:background="#66bdbdbd"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="5dp"
                android:text="@string/rules_gameRules"
                android:textSize="18sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/rules_rulesText"
                android:textSize="16sp"
                android:textColor="#000000"/>

            <View
                android:background="#66bdbdbd"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="5dp"
                android:text="@string/rules_blackJack"
                android:textSize="18sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/rules_blackJackText"
                android:textSize="16sp"
                android:textColor="#000000"/>

            <View
                android:background="#66bdbdbd"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="5dp"
                android:text="@string/rules_bust"
                android:textSize="18sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/rules_bustText"
                android:textSize="16sp"
                android:textColor="#000000"/>

            <View
                android:background="#66bdbdbd"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="5dp"
                android:text="@string/rules_hit"
                android:textSize="18sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/rules_hitText"
                android:textSize="16sp"
                android:textColor="#000000"/>

            <View
                android:background="#66bdbdbd"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="5dp"
                android:text="@string/rules_stay"
                android:textSize="18sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/rules_stayText"
                android:textSize="16sp"
                android:textColor="#000000"/>

            <View
                android:background="#66bdbdbd"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="5dp"
                android:text="@string/popupTitle"
                android:textSize="18sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/insuranceText"
                android:textSize="16sp"
                android:textColor="#000000"/>

            <View
                android:background="#66bdbdbd"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="5dp"
                android:text="@string/rules_victory"
                android:textSize="18sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/rules_victoryText"
                android:textSize="16sp"
                android:textColor="#000000"/>

            <View
                android:background="#66bdbdbd"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="5dp"
                android:text="@string/rules_btnInfo"
                android:textSize="18sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/rules_btnInfoText"
                android:textSize="16sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="10dp"
                android:gravity="end"
                android:text="@string/app_creator"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>