<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/frame02"
    tools:context=".Activity_Popup_Insurance">

    <!-- 타이틀바 -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/popupTitle"
            android:textSize="20sp"
            android:textColor="#fff"
            android:gravity="center"
            android:background="#ff7a00"
            android:layout_width="match_parent"
            android:layout_height="53dp" />
    </LinearLayout>
    <!-- //end 타이틀바 -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="5dp"
        android:gravity="center"
        android:text="@string/popupMsg"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/insurance_nowMoneyTv"
        android:paddingTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_info"
        android:textColor="#757575"
        android:textSize="15sp"/>

    <!-- Notice -->
    <LinearLayout
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/popup_name"
            android:textSize="15sp"
            android:textColor="#000000"
            android:gravity="center"/>
        <EditText
            android:id="@+id/insurance_moneyEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:layout_marginBottom="3dp"
            android:inputType="number"
            android:text="@string/zero"
            android:textSize="15sp"
            android:textColor="#000000"
            android:alpha="0.87"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/popup_info"
            android:textColor="#000000"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/insurance_plus10Btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:text="@string/plus10"
            android:textSize="15sp"
            android:textColor="#000000"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/insurance_plus50Btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:text="@string/plus50"
            android:textSize="15sp"
            android:textColor="#000000"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/insurance_plus100Btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:text="@string/plus100"
            android:textSize="15sp"
            android:textColor="#000000"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/insurance_AllInBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/frame01"
            android:text="@string/popup_allin"
            android:textSize="15sp"
            android:textColor="#ff7a00"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/insurance_okBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/frame01"
            android:text="@string/popup_ok"
            android:textSize="15sp"
            android:textColor="#ff7a00"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/insurance_passBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/frame01"
            android:text="@string/pass"
            android:textSize="15sp"
            android:textColor="#ff7a00"/>
    </LinearLayout>

</LinearLayout>