<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/frame01"
    tools:context=".Activity_Popup">

    <!-- 타이틀바 -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/popup_title"
            android:textSize="20sp"
            android:textColor="#fff"
            android:gravity="center"
            android:background="#ff7a00"
            android:layout_width="match_parent"
            android:layout_height="53dp" />
    </LinearLayout>
    <!-- //end 타이틀바 -->

    <!-- Notice -->
    <LinearLayout
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/popup_name"
            android:textSize="15sp"
            android:textColor="#000000"
            android:gravity="center"/>
        <EditText
            android:id="@+id/popup_moneyEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:layout_marginBottom="3dp"
            android:inputType="number"
            android:text="0"
            android:textSize="15sp"
            android:textColor="#000000"
            android:alpha="0.87"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/popup_info"
            android:textColor="#000000"
            android:gravity="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/popup_nowMoneyTv"
        android:paddingBottom="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_info"
        android:textColor="#757575"
        android:textSize="15sp"/>

    <!-- Notice
    <View
        android:background="#66bdbdbd"
        android:layout_width="match_parent"
        android:layout_height="1dp" /> -->

    <!-- 닫기 버튼 -->
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/popup_AllInBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/frame01"
            android:text="@string/popup_allin"
            android:textSize="15sp"
            android:textColor="#ff7a00"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/popup_okBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/frame01"
            android:text="@string/popup_ok"
            android:textSize="15sp"
            android:textColor="#ff7a00"/>
    </LinearLayout>
    <!--// 닫기 버튼 -->

</LinearLayout>